--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Ola mundo!!!
+<!DOCTYPE html>
+<html lang="pt_BR">
+   <met charset="UTF-8">
+   <title>
+    Primeira Página
+   </title>
+    <body>
+        <!--
+        Isto é um comentario emHTML
+        -->
+    <h1>Bem vindo ao HTML 5</h1>
+
+    <p><b><h2> RAYQUAZA APARECEU! </b></p></h2>
+    <img src="rayquaza.webp" alt="">
+</body>
+</html>
