--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 
     <p><b><h2> RAYQUAZA APARECEU! </b></p></h2>
     <img src="rayquaza.webp" alt="">
+
+      <a href="formulario.html">
+        <img src="voltar.png" width="50px" height="50px">
+    </a>
+
 </body>
 </html>
