--- a/atividade_formulario.html
+++ b/atividade_formulario.html
@@ -38,11 +38,36 @@
     <input type="radio" name="devolucao">Sim
     <input type="radio" name="devolucao">Não
     <br>
-    
+    <button>Limpar</button>
+    <button>Cadastrar</button>
+</fieldset>
+
+<fieldset>
+ <legend>Dados do último material cadastrado</legend>
+
+<table border="2">
+    <tr>
+        <th>Nome</th>
+        <th>Lápis</th>
+     </tr>
+     <tr>
+        <th>Preço</th>
+        <th>R$12,30</th>
+     </tr>
+     <tr>
+        <th>Quantidade</th>
+        <th>200</th>
+     </tr>
+     <tr>
+        <th>Devolução</th>
+        <th>Sim</th>
+     </tr>
+</table>
 
 
 
-    
+
+
 </fieldset>
 
 
